force-app/main/default/objects/Sign_Off__c/Sign_Off__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - used to capture business stakeholder sign off of various project stages.</description>
    <label>Sign Off</label>
    <nameField>
        <label>Sign Off Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sign Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>