force-app/main/default/objects/Sign_Off__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>Sign off agreement details</description>
    <label>Agreement</label>
    <type>TextArea</type>
</CustomField>