force-app/main/default/objects/Sign_Off__c/fields/Agreement_Statement__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Statement__c</fullName>
    <defaultValue>&quot;I have reviewed the deliverables for the above specified stage and capability. I give official sign off and approval to move forward to the next stage.&quot;</defaultValue>
    <description>Sign off agreement statement details</description>
    <label>Agreement Statement</label>
    <type>TextArea</type>
</CustomField>