force-app/main/default/objects/Sign_Off__c/fields/Assigned_Approver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver assigned for the sign off</description>
    <label>Assigned Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sign_Off</relationshipName>
    <type>Lookup</type>
</CustomField>