force-app/main/default/objects/Sign_Off__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related capability for the sign off</description>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Sign Off</relationshipLabel>
    <relationshipName>Sign_Off</relationshipName>
    <type>Lookup</type>
</CustomField>