force-app/main/default/objects/Sign_Off__c/fields/Sign_Off_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Date_Time__c</fullName>
    <description>Date/Time of the sign off</description>
    <label>Sign Off Date/Time</label>
    <type>DateTime</type>
</CustomField>