force-app/main/default/objects/Sign_Off__c/fields/Sign_Off_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Stage__c</fullName>
    <description>Stage of the sign off</description>
    <label>Sign Off Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Adapt &amp; Ongoing Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>