force-app/main/default/objects/Sign_Off__c/fields/Sign_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Status__c</fullName>
    <description>Status of the sign off</description>
    <label>Sign Off Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>