force-app/main/default/objects/Sign_Off__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <description>Stakeholders for the sign off</description>
    <label>Stakeholder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>