force-app/main/default/objects/Sign_Off__c/validationRules/Sign_Off_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sign_Off_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
LEN(Agreement__c)&gt;0 , Agreement__c &lt;&gt; Agreement_Statement__c 
)</errorConditionFormula>
    <errorDisplayField>Agreement__c</errorDisplayField>
    <errorMessage>Please type the Agreement Statement exactly as it appears.</errorMessage>
</ValidationRule>