force-app/main/default/objects/Sign_Off__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Capability__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_Approver__c</columns>
    <columns>Sign_Off_Stage__c</columns>
    <columns>Sign_Off_Status__c</columns>
    <columns>Sign_Off_Date_Time__c</columns>
    <columns>Stakeholder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>